# OS-VideoSDR

./: README.md  config_loader.py  pytest.ini
config/: crypto.yaml  network.yaml  profiles.yaml
docs/: GATE_1_2_READINESS.md  PHASE_C_D_COMPLETION.md  architecture.md  crypto_policy.md  latency_budget.md  next_machine_handoff.md  pl_ring_uio_spec.md  protocol_spec.md  pynq_pl_first_architecture.md  test_plan.md
docs/templates/: ring_uio_template.dtsi
pc/: __init__.py
pc/runtime/: __init__.py  aes_gcm_sw.py  main_rx.py  sink_display.py  source_capture.py  tx_daemon_rx_test.py  udp_rx.py  udp_tx.py  video_io.py
protocol/: constants.py  packet_schema.py  validation.py
pynq/: __init__.py
pynq/ps_shim/: CMakeLists.txt  README.md  build.sh
pynq/ps_shim/include/: ring_api.h
pynq/ps_shim/src/: main.c  ping_pong_udp_tx_example.c  ring_backend.c  ring_stub.c
pynq/runtime/: __init__.py  aes_gcm_dma.py  aes_seq_ctrl.py  crypto.py  hdmi_capture.py  hdmi_output.py  main.py  preflight_hdmi_check.py  reassembly.py  rx_main.py  telemetry.py  transport.py  tx_daemon.py  tx_main.py  udp_rx.py  udp_tx.py
scripts/: check_uio_ring_map.sh  collect_metrics.ps1  run_fullhd_fps_sweep.sh  run_soak_test.ps1  run_v1_hardening_matrix.ps1  run_v2_hdmi_baseline.ps1  run_wired_rx.ps1  run_wired_tx.ps1  setup_pynq_ssh_key.ps1  v1_hardening_matrix.json  v2_hdmi_baseline_matrix.json
tests/integration/: __init__.py  test_nonce_monotonic.py  test_reassembly.py  test_roundtrip.py  test_udp_loopback.py
tests/soak/: test_scaffold.py
tests/unit/: test_packet_schema.py  test_validation.py
